--- a/index.html
+++ b/index.html
@@ -158,9 +158,7 @@
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <div class="about-container">
-    
-      <img src="D:\webdemo\p.sathiya.jpg" alt="p sathiya Photo">
+    <div class="about-container"
       <p>
         I'm a second-year BCA student passionate about web development, UI/UX design, and creating responsive, user-friendly websites. Always curious and eager to learn new technologies.
       </p>
@@ -211,4 +209,5 @@
   </footer>
 
 </body>
+
 </html>
